style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&family=Poppins:wght@200;300;500;900&display=swap");
/* variables */
:root {
  --body-bg: #fff;
  --black-1: #0d081a;
  --white-1: white;
  --black-2: #3f3c3c;
  --primary-color: #6c56e1;
}
/* Global style */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  font-family: "Poppins", sans-serif;
  font-size: 10px;
  scroll-behavior: smooth;
  overflow-x: hidden;
}
body {
  background: var(--body-bg);
}

img {
  width: 100%;
  height: 100%;
}
p {
  font-size: 1.6rem;
  color: var(--secondary-black);
}
a {
  display: inline-block;
  text-decoration: none;
  color: var(--black-1);
}

ul {
  list-style: none;
}
section {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 100px 0;
}
.container {
  width: 90%;
  margin: 0 auto;
  max-width: 1200px;
}
.btn {
  background: var(--primary-color);
  padding: 0.6em 1.1em;
  color: #fff;
  font-size: 1.5rem;
  border-radius: 10px;
  display: flex;
  align-items: center;
  margin-bottom: 2rem;
  gap: 1rem;
}
.btn:hover {
  background: #412eac;
}
.section_header {
  font-size: 3.5rem;
  text-align: center;
  font-family: "Poppins", sans-serif;
}
.section_subheading {
  text-align: center;
  margin-bottom: 3rem;
  color: #412eac;
}

/* Nav style */

.nav {
  padding-top: 2rem;
  display: none;
}
.nav-open,
.nav_close,
.nav_bgOverlay {
  display: none;
}

.nav_wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.logo {
  font-size: 3rem;
}
.nav_list_wrapper {
  display: flex;
  gap: 3rem;
}

.nav_list_wrapper li .nav_link {
  font-size: 2rem;
  color: var(--black-2);
  font-family: "Montserrat", sans-serif;
  position: relative;
  transition: 0.3s;
}
.nav_list_wrapper li .nav_link::after {
  content: "";
  width: 0;
  position: absolute;
  left: 0;
  bottom: -5px;
  background: var(--primary-color);
  height: 3px;
  transition: 0.3s;
}
.nav_list_wrapper li .nav_link:hover::after {
  width: 100%;
}
.nav_list_wrapper li .nav_link:hover {
  color: var(--black-1);
}

/* Hero style */

#hero {
  height: 100vh;
  width: 100%;
  margin: 40px 0;
}
#hero .hero_wrapper {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  justify-content: center;
}
#hero .hero_right {
  flex: 6;
}
#hero .hero_left {
  flex: 8;
  text-align: center;
}
#hero .hero_right {
  overflow: hidden;
  border-radius: 12px;
  margin-bottom: 2rem;
  height: 500px;
}
#hero .hero_right img {
  max-width: 450px;
  border-radius: 12px;
  object-fit: cover;
}
#hero .hero_left .name {
  font-size: 3.5rem;
  font-family: "Poppins";
  font-weight: 900;
}
#hero .hero_left .title {
  font-size: 1.8rem;
  color: var(--black-2);
  margin-bottom: 1.5rem;
  text-transform: capitalize;
  font-weight: 600;
}
#hero .hero_left .hero_desc {
  font-size: 1.6rem;
  margin-bottom: 1.5rem;
}
.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.btn svg {
  width: 20px;
}
@media only screen and (min-width: 768px) {
  #hero {
    margin: 0;
  }
  #hero .hero_wrapper {
    flex-direction: row;
  }
  #hero .hero_left {
    text-align: left;
    padding: 3rem;
  }
  #hero .hero_left .name {
    font-size: 4rem;
  }
  #hero .hero_left .title {
    font-size: 2rem;
    /* letter-spacing: 0.1em; */
  }
  #hero .hero_left .hero_desc {
    font-size: 1.5rem;
    margin-bottom: 3.5rem;
  }
  .nav {
    display: block;
  }
  #hero .hero_left .buttons {
    justify-content: flex-start;
  }
}

/* Works styles */
#portfolio {
}

/* #portfolio {
  padding: 5rem 0;
  border: 1px solid black;
  margin: 0 auto;
  width: 100%;
}

#portfolio .all-items {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3.5rem;
  display: none;
}
.all-items .item {
  display: flex;
  max-width: 400px;
  flex-direction: column;
  gap: 1rem;
  margin: 0 auto;
}
.all-items .item .img {
  overflow: hidden;
}
.all-items .item .img img {
  object-fit: cover;
  transition: transform 0.3s;
  display: none;
}
.all-items .item:hover img {
  transform: scale(1.1);
}
.all-items .item .left {
  background: #3f3c3c;
  border-radius: 12px;
  padding: 2rem;
  color: var(--white-1);
  text-align: center;
  box-shadow: 0px 0px 10px 0px #2b1e74;
}
.all-items .item .portfolio_title {
  font-size: 2rem;
  font-weight: 600;
  color: #7861f7;
  text-align: center;
}
.portfolio_desc {
  color: var(--black-1);
  font-weight: 600;
  margin-bottom: 2rem;
  text-align: center;
}
.all-items .item .right {
  box-shadow: 0px 0px 10px 0px #2b1e74;
  border-radius: 12px;
  padding: 1.5rem;
}
.all-items .item .right .project_desc {
  text-align: center;
  margin-bottom: 2rem;
}
@media only screen and (min-width: 768px) {
  #portfolio {
    padding: 5rem 0;
  }

  #portfolio .section_subheading {
    margin-bottom: 5rem;
  }
  #portfolio .all-items {
    gap: 1rem;
    margin-bottom: 5rem;
  }
  #portfolio .all-items .item {
    flex-direction: row;
    max-width: none;
  }
  #portfolio .all-items .item:nth-child(even) {
    flex-direction: row-reverse;
  }
  #portfolio .item .left,
  #portfolio .item .right {
    flex: 1;
  }

  .all-items .item .right {
    text-align: left;
    padding: 2rem;
  }
  .all-items .item .right .project_desc {
    font-size: 1.5rem;
    margin-bottom: 5rem;
  }
  .all-items .right .portfolio_title {
    font-size: 2rem;
  }

  .all-items .right .portfolio_title,
  .all-items .right .portfolio_desc {
    text-align: left;
  }
  .all-items .right .portfolio_desc {
    font-size: 1.6rem;
  }
} */

/* About styles */

/* #about {
  padding: 10rem 0;
  display: none;
}

#about .about_wrapper {
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.about_wrapper .about_img {
  width: 100%;
  flex: 3;
  height: 350px;
  border-radius: 10px;
  overflow: hidden;
}
.about_wrapper .about_img img {
  object-fit: cover;
  border-radius: 10px;
}
.about_wrapper .about_info {
  flex: 6;
  padding: 2rem 5rem;
}
.about_info .about_text {
  font-size: 1.5rem;
  margin-bottom: 3rem;
}
.social_links {
  margin-bottom: 4rem;
}
.social_links ul {
  display: flex;
}
.social_links ul li {
  margin-right: 1.5rem;
}
.social_links ul li a {
  width: 40px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.social_links ul li a ion-icon {
  font-size: 30px;
  color: black;
}
.about_info .buttons {
  justify-content: flex-start;
}
.about_info .btn.outline {
  background: transparent;
  border: 2px solid #6c56e1;
  color: #412eac;
  transition: 0.3s;
}
.about_info .btn.outline:hover {
  background: #6c56e1;
  color: #fff;
}
.about_info .btn.outline span {
  font-weight: 500;
}
.about_info .btn.outline ion-icon {
  font-size: 2rem;
  transition: 0.3s;
}
.about_info .social_link:hover {
  transform: translateY(-5px);
  transition: 0.3s;
}
.about_info .social_link ion-icon {
  transition: 0.3s;
}
.about_info .social_link:hover ion-icon {
  color: #412eac;
}
@media only screen and (max-width: 768px) {
  #about {
    padding: 5rem 0;
  }
  #about .about_wrapper {
    flex-direction: column;
  }
} */
/* Skills styles */

/* #skills {
  padding: 5rem 0;
}
.container-small {
  width: 70%;
  margin: 0 auto;
  max-width: 1000px;
}
.skills_card_wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  align-items: center;
  justify-content: center;
}
#skills .skill_title {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 2rem;
  margin-bottom: 4rem;
}
.skill_title .logo {
  width: 5rem;
  height: 5rem;
}
.skill_title .logo svg {
  stroke-width: 2;
  color: #6c56e1;
}
.skill_title .title {
  font-size: 3rem;
  font-family: "Poppins";
  font-weight: 500;
}
.skill_logo {
  width: 9rem;
  height: 9rem;
  padding: 1rem;
  border-radius: 6px;
}
.skill_logo .icon {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}
.skill_logo .icon svg {
  width: 100%;
  height: 60%;
}
.skill_logo .skill_name {
  text-align: center;
  font-size: 1.3rem;
}
.skills_wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
  color: var(--black-2);
}

.skills_card {
  padding: 2rem;
  border-radius: 9px;
  box-shadow: 0px 0px 20px 0px #4705fc1f;
}
.skills_card:nth-child(1),
.skills_card:nth-child(2) {
  flex: 1;
}
#skills {
  display: none;
} */

